<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_worlds"
        android:name="dam.pmdm.spyrothedragon.ui.WorldsFragment"
        android:label="@string/worlds"
        tools:layout="@layout/fragment_worlds">
        <action
            android:id="@+id/action_worlds_collectibles"
            app:destination="@id/navigation_collectibles"
            app:enterAnim="@anim/set_right"
            app:exitAnim="@anim/set_left" />
        <action
            android:id="@+id/action_worlds_characters"
            app:destination="@id/navigation_characters"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_characters"
        android:name="dam.pmdm.spyrothedragon.ui.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_characters_worlds"
            app:destination="@id/navigation_worlds"
            app:enterAnim="@anim/set_right"
            app:exitAnim="@anim/set_left" />
        <action
            android:id="@+id/action_characters_collectibles"
            app:destination="@id/navigation_collectibles"
            app:enterAnim="@anim/set_right"
            app:exitAnim="@anim/set_left" />
    </fragment>

    <fragment
        android:id="@+id/navigation_collectibles"
        android:name="dam.pmdm.spyrothedragon.ui.CollectiblesFragment"
        android:label="@string/collectibles"
        tools:layout="@layout/fragment_collectibles">
        <action
            android:id="@+id/action_collectibles_worlds"
            app:destination="@id/navigation_worlds"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_collectibles_characters"
            app:destination="@id/navigation_characters"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>
</navigation>